# dim-stage

./: .gitignore  CLAUDE.md  README.md  fitter.py  intervention.py  m0_agree_gate.py  m0_hour_one_gate.py  m0_readability_gate.py  m1_introspection.py  m1_verbal_report.py  m2_two_hop.py  m3_directed_modulation.py  pyproject.toml  readability.py  remote-fit-3b.sh  s1_introspection_localize.py  s2_generalization.py  s3_selectivity.py  s4-avoidance-items.json  s4_avoidance.py  stats.py  test_avoidance.py  test_directed_modulation.py  test_fitter.py  test_generalization.py  test_intervention.py  test_introspection.py  test_readability.py  test_selectivity.py  test_stats.py  test_two_hop.py  test_verbal_report.py
docs/: DECISIONS.md  KICKOFF.md  LEARNING.md  M0-BRIEF.md  M1-BRIEF.md  M2-BRIEF.md  M3-BRIEF.md  ROADMAP.md  S1-BRIEF.md  S2-BRIEF.md  S3-BRIEF.md  S4-BRIEF.md
docs/paper/: figures.py  (+5 more)
results/: derived-contrasts.json  directed-modulation-qwen2.5-0.5b-instruct.json  directed-modulation-qwen2.5-1.5b-instruct.json  directed-modulation-qwen2.5-3b-instruct.json  introspection-qwen2.5-0.5b-instruct.json  introspection-qwen2.5-1.5b-instruct.json  introspection-qwen2.5-3b-instruct.json  readability-qwen2.5-0.5b-instruct.json  readability-qwen2.5-1.5b-instruct.json  readability-qwen2.5-3b-instruct.json  s1-introspection-qwen2.5-0.5b-instruct.json  s1-introspection-qwen2.5-1.5b-instruct.json  s1-introspection-qwen2.5-3b-instruct.json  s2-generalization-qwen2.5-0.5b-instruct.json  s2-generalization-qwen2.5-1.5b-instruct.json  s2-generalization-qwen2.5-3b-instruct.json  (+12 more)
(+1 files in other folders)
